--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="nav-items">
       <ul>
-        <li><a href="https://github.com/akbaralinabiev"><i class="fa-brands fa-github fa-xl"
+        <li><a href="https://github.com/akbaralinabiev/Weather-App-JavaScript"><i class="fa-brands fa-github fa-xl"
               style="color: #d66464;"></i></a></li>
         <li><a href="https://www.linkedin.com/in/akbarali-nabiev/"><i class="fa-brands fa-linkedin fa-xl"
               style="color: #d66464;"></i></a></li>
