--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
         <p id="precipitation"></p>
       </div>
 
+      <div class="ref-btn">
+        <button id="refresh-button">Refresh</button>
+      </div>
+
       <h2>Enter your city</h2>
       <div class="inp-but">
         <input type="text" id="search-input" placeholder="E.g., New York, London, Paris">
